--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!--Header section-->
@@ -152,7 +152,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="images/product-1.png" alt="">
+                    <img src="img/product-1.png" alt="">
                 </div>
                 <div class="content">
                     <h3>fresh coffee</h3>
@@ -174,7 +174,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="images/product-2.png" alt="">
+                    <img src="img/product-2.png" alt="">
                 </div>
                 <div class="content">
                     <h3>fresh coffee</h3>
@@ -196,7 +196,7 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="images/product-3.png" alt="">
+                    <img src="img/product-3.png" alt="">
                 </div>
                 <div class="content">
                     <h3>fresh coffee</h3>
@@ -219,7 +219,7 @@
         <h1 class="heading">Customer's <span>review</span></h1>
         <div class="box-container">
             <div class="box">
-                <img src="img/quote-img.png" alt="Quote" class="quote"/>
+                <img src="img/quote-img.jpg" alt="Quote" class="quote"/>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores neque fugiat adipisci error magni eligendi. Iusto, ipsam ea provident dolorem quia dignissimos repellendus soluta. Velit?</p>
                 <img src="img/pic-1.png" class="user" alt="user1"/>
                 <h3>John Doe</h3>
@@ -234,7 +234,7 @@
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-                <img src="images/pic-3.png" class="user" alt="">
+                <img src="img/pic-3.png" class="user" alt="">
                 <h3>john deo</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -275,7 +275,7 @@
         <div class="box-container">
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-1.jpeg" alt="">
+                    <img src="img/blog-1.jpeg" alt="">
                 </div>
                 <div class="content">
                     <a href="#" class="title">tasty and refreshing coffee</a>
@@ -287,7 +287,7 @@
     
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-2.jpeg" alt="">
+                    <img src="img/blog-2.jpeg" alt="">
                 </div>
                 <div class="content">
                     <a href="#" class="title">tasty and refreshing coffee</a>
@@ -299,7 +299,7 @@
     
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-3.jpeg" alt="">
+                    <img src="img/blog-3.jpeg" alt="">
                 </div>
                 <div class="content">
                     <a href="#" class="title">tasty and refreshing coffee</a>
