style.css ready, javascript done as well, will do some changes later on

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#menu">Menu</a>
             <a href="#products">Products</a>
             <a href="#review">Review</a>
-            <a href="#ontact">Contact</a>
+            <a href="#contact">Contact</a>
             <a href="#blogs">Blogs</href>
         </nav>
 
@@ -232,10 +232,23 @@
                 </div>
             </div>
             <div class="box">
-                <img src="images/quote-img.png" alt="" class="quote">
+                <img src="img/quote-img.jpg" alt="Quote" class="quote"/>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores neque fugiat adipisci error magni eligendi. Iusto, ipsam ea provident dolorem quia dignissimos repellendus soluta. Velit?</p>
+                <img src="img/pic-2.png" class="user" alt="user2"/>
+                <h3>mary someone</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/quote-img.jpg" alt="" class="quote">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-                <img src="img/pic-3.png" class="user" alt="">
-                <h3>john deo</h3>
+                <img src="img/pic-3.png" class="user" alt="user3">
+                <h3>adam anyone</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
